--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap');
+
 .containerCenter{
  display: flex;
  justify-content: center;
@@ -41,7 +43,8 @@
 }
 
 .title{
-  font-size: 2rem;
+  font-family: 'Poppins', sans-serif;
+  font-size: 2.5rem;
   font-weight: bold;
 }
 
