--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 * {
   padding: 0;
   margin: 0;
@@ -13,7 +15,7 @@
   --red: #EA1D2C;
 
   --background: #F7F7F7;
-  --gray: #8A8A8A;
+  --gray: #D2D2D2;
 }
 
 button{
@@ -30,7 +32,7 @@ body{
 }
 
 body, input, textarea, select, button{
-  font: 400 1rem sans-serif;
+  font: 400 1rem 'Roboto', sans-serif;
 }
 
 @media (max-width: 720px){
