--- a/frontend/src/pages/dashboard/styles.module.css
+++ b/frontend/src/pages/dashboard/styles.module.css
@@ -61,3 +61,10 @@
 .orderItem:hover{
   filter: brightness(0.9);
 }
+
+.empty{
+  font-size: 1.2rem;
+  font-weight: 500;
+  text-align: center;
+  margin-top: 3rem;
+}
