--- a/frontend/src/components/header/styles.module.css
+++ b/frontend/src/components/header/styles.module.css
@@ -51,3 +51,31 @@
   transform: scale(1.2);
   filter: brightness(1.08);
 }
+
+@media screen and (max-width: 600px) {
+  .menu{
+    width: 380px;
+  }
+
+  .nav{
+    margin-left: 1.5rem;
+  }
+
+  .menu a{
+    margin-left: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .menu {
+    width: 250px;
+  }
+
+  .img{
+    display: none;
+  }
+
+  .menu a{
+    margin-left: 0;
+  }
+}
