--- a/frontend/src/pages/dashboard/styles.module.css
+++ b/frontend/src/pages/dashboard/styles.module.css
@@ -5,10 +5,10 @@
   flex-direction: column;
   margin: 3rem auto;
   padding: 0 2rem;
+  overflow: hidden;
 }
 
 .title {
-  /* margin: 3rem 0 .5rem 0; */
   font-family: 'Poppins', sans-serif;
   font-size: 1.6rem;
   font-weight: bold;
@@ -41,7 +41,7 @@
   display: flex;
   flex-direction: row;
   background: #FFC1C4;
-  padding: 0.6rem;
+  padding: 1rem;
   align-items: center;
   border-radius: .2rem;
   transition: filter 500ms;
@@ -55,7 +55,6 @@
   color: var(--black);
   font-weight: 400;
   align-items: center;
-  
 }
 
 .orderItem:hover{
