feat: styling the titles

--- a/frontend/src/pages/category/styles.module.css
+++ b/frontend/src/pages/category/styles.module.css
@@ -1,30 +1,35 @@
-.container{
-  max-width: 620px;
+.content {
+  margin-left: 300px;
+  padding: 1px 16px;
+}
+
+.title{
+  font-family: 'Poppins', sans-serif;
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.container {
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
   margin: 0 auto;
   padding: 0 2rem;
 }
 
-.title{
-  margin: 3rem 0 .5rem 0;
-  font-family: 'Poppins', sans-serif;
-  font-size: 1.6rem;
-  font-weight: bold;
-}
-
-.category{
+.category {
+  margin-top: 1rem;
   display: flex;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   flex-direction: column;
-  width: 100%;
+  width: 400px;
+  padding: 2rem 0 2rem 0;
 }
 
-.category form{
+.category form {
   width: 100%;
   display: flex;
   flex-direction: column;
 }
+
