--- a/frontend/src/pages/user/styles.module.css
+++ b/frontend/src/pages/user/styles.module.css
@@ -3,26 +3,10 @@
   padding: 1px 16px;
 }
 
-.title {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin: 1rem 0;
-  border-radius: 20px;
-  background-color: #fff;
-  border: 1px solid rgb(218, 217, 217);
-  padding: .8rem;
-}
-
-.title {
-  margin-left: 1rem;
-  font-size: 1rem;
-}
-
-.title h1 {
-  font-size: 20px;
-  font-weight: 500;
-  margin-left: 16px;
+.title{
+  font-family: 'Poppins', sans-serif;
+  font-size: 2rem;
+  font-weight: bold;
 }
 
 .container {
@@ -47,11 +31,6 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-}
-
-.titlePageUser {
-  text-align: center;
-  font-size: 2rem;
 }
 
 @media screen and (max-width: 768px) {
