--- a/frontend/src/pages/category/styles.module.css
+++ b/frontend/src/pages/category/styles.module.css
@@ -33,3 +33,76 @@
   flex-direction: column;
 }
 
+.creationCategory {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.table  {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  border-spacing: 0 0.5rem;
+  margin-top: 1rem;
+  table-layout: fixed;
+}
+
+.table caption {
+  font-size: 1.5rem;
+  margin: .5rem 0 .75rem;
+}
+
+.table tr {
+  background-color: #F8F8F8;
+  border: 1px solid #DDD;
+  padding: .35rem;
+}
+
+.table th, .table td {
+  padding: .62rem;
+  text-align: center;
+  background-color:#fff;
+}
+
+.table th {
+  font-size: .85rem;
+  letter-spacing: .1rem;
+  text-transform: uppercase;
+}
+
+.table td .actionUpdate{
+  border: 0;
+  padding: 5px;
+  align-items: center;
+  display: inline-block;
+  background-color: #FEC447;
+  margin-right: 5px;
+  border-radius: 3px;
+}
+
+.table td .actionDelete{
+  border: 0;
+  padding: 5px;
+  align-items: center;
+  display: inline-block;
+  background-color: var(--red);
+  border-radius: 3px;
+}
+
+.table td .actionUpdate svg,
+.table td .actionDelete svg {
+  vertical-align: middle;
+}
+
+.description{
+  max-width: 25ch;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+@media screen and (max-width: 768px) {
+  .content {
+   margin-left: 0;
+  }
+}
