--- a/frontend/src/pages/Products/styles.module.css
+++ b/frontend/src/pages/Products/styles.module.css
@@ -4,7 +4,7 @@
 }
 
 .container {
-  max-width: 880px;
+  max-width: 1100px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   margin: 1rem auto;
@@ -28,7 +28,7 @@
   transition: filter 300ms;
 }
 
-.lenAndButt a:hover{
+.lenAndButt a:hover {
   filter: brightness(1.08);
 }
 
@@ -40,31 +40,31 @@
   text-align: center;
 }
 
-.containerItem{
+.containerItem {
   border: 1px solid #dcdcdc;
   background: var(--white);
-  height: 280px;
+  height: 300px;
   margin: 1rem .8rem;
   border-radius: .3rem;
   transition: border 300ms;
 }
 
-.containerItem:hover{
+.containerItem:hover {
   border: 1px solid #bbb;
 }
 
-.item{
+.item {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-.item img{
+.item img {
   width: 100%;
   background-position: center;
   background-size: cover;
-  height: 160px;
+  height: 200px;
   border-top-left-radius: .3rem;
   border-top-right-radius: .3rem;
   object-fit: cover;
@@ -72,24 +72,31 @@
   transition: border-bottom 300ms;
 }
 
-.item img:hover{
+.item img:hover {
   border-bottom: 1px solid #bbb;
 }
 
-.name{
+.name {
+  max-width: 20ch;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: pre;
+
   font-size: 1.3rem;
   margin-top: .8rem;
   word-break: break-all;
   line-height: 2.5rem;
+
+  padding: 0 .5rem;
 }
 
-.price{
+.price {
   font-size: 1.1rem;
   font-weight: 500;
   color: var(--red);
 }
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 768px) {
   .container{
     grid-template-columns: 1fr; 
   }
