--- a/frontend/src/components/ModalOrder/styles.module.css
+++ b/frontend/src/components/ModalOrder/styles.module.css
@@ -31,6 +31,12 @@
   margin: 1rem 0;
 }
 
+.buttonAndStatus{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .concludeOrder{
   margin-top: 1.5rem;
   background-color: rgb(163, 248, 188);  
@@ -39,6 +45,10 @@
   border-radius: 0.2rem;
   color: #000;
   font-weight: bold;
+}
+
+.statusOrder{
+  font-size: .8rem;
 }
 
 @media screen and (max-width: 700px) {
